# seamless-dask

./: .gitmodules  README.md  TODO  anti-deadlock.txt  environment.yml  lifecycle-discussion-final-notes.txt  lifecycle-discussion.md  lifecycle.txt  pyproject.toml  seamless-dask-wrapper-design.md
seamless_dask/: __init__.py  client.py  default.py  dummy_scheduler.py  permissions.py  transformation_mixin.py  transformer_client.py  types.py  worker_setup.py  wrapper.py
tests/: test_dependencies.py  test_dummy_scheduler.py  test_execution_records.py  test_nested_transformations.py  test_nested_transformations_multi.py  test_nested_transformations_pid.py  test_nested_transformations_stress.py  test_seamless_client.py
