[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seamless-dask"
version = "0.0.0"
description = ""
requires-python = ">=3.13"
dependencies = [
    "dask",
    "distributed",
]

[project.scripts]
seamless-dask-wrapper = "seamless_dask.wrapper:main"
