[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seamless-dask"
version = "0.0.0"
description = ""
requires-python = ">=3.12"
dependencies = [
    "dask",
    "distributed",
]

[tool.setuptools]
package-dir = {"" = "seamless_dask"}

[project.scripts]
seamless-dask-wrapper = "seamless_dask.wrapper:main"
